[gd_scene load_steps=5 format=2]

[ext_resource path="res://Allies/boss_monster.png" type="Texture" id=1]
[ext_resource path="res://Allies/Boss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 23 )

[node name="Boss" type="KinematicBody2D" groups=[
"Boss",
"Enemies",
]]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -21 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -14 )
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="MovementIntervalTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StunnedTimer" type="Timer" parent="."]

[node name="MovementDurationTimer" type="Timer" parent="."]
